# xfce4panelmenu

xfce4panelmenu/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  genmenu.pl  xfce4-menustart-plugin.spec.in
xfce4panelmenu/panel-plugin/: Makefile.am  Makefile.in  common.h  default.xpm  fsbrowser.c  fsbrowser.h  fstab.c  fstab.h  main.c  menu.c  menu.h  menustart.c  menustart.h
xfce4panelmenu/panel-plugin/.deps/: libmenustart_la-fsbrowser.Plo  libmenustart_la-fstab.Plo  libmenustart_la-main.Plo  libmenustart_la-menu.Plo  libmenustart_la-menustart.Plo  libmenustart_la-xmenu.Plo
xfce4panelmenu/pixmaps/: Makefile.am  Makefile.in
xfce4panelmenu/po/: POTFILES.in  es.po  pl.po  pt_BR.po  xfce4-panel-menu-plugin.pot
